still working on table scrolling and alignment with fixed headers

--- a/geeoh.css
+++ b/geeoh.css
@@ -7,6 +7,11 @@ table
   border-collapse:collapse;
 }
 
+table, th, td
+{
+  box-sizing: border-box;
+}
+
 #tool-box
 {
   // width: 100%;
@@ -42,6 +47,18 @@ table
 #elements-tbody tr
 {
   border: 2px solid red;
+}
+
+#elements-thead
+{
+  display: block;
+}
+
+#elements-tbody
+{
+  display: block;
+  max-height: 300px;
+  overflow-y: scroll;
 }
 
 #elements-box,
